<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="join_now">Join now</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_error_msg">Please enter a valid email</string>
    <string name="password_error_msg">Please enter a valid password</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list">Shoe list</string>
    <string name="shoe_details">Shoe details</string>
    <string name="welcome_main_text">Welcome to our shoe store, as they always, clothes make a man.</string>
    <string name="instructions_text_in_welcome_screen">Kindly find the instructions in the next screen.</string>
    <string name="main_instructions">You can add a new shoe with many details attributes. You cann add brand, category, size, and description for each shoe.</string>
    <string name="join_now_instructions">what are you waiting? start your own shop right now!</string>
    <string name="start">Start</string>
    <string name="category">Category:</string>
    <string name="size">Size:</string>
    <string name="brand">Brand:</string>
    <string name="description">Description:</string>
    <string name="add_shoe">Add shoe</string>
    <string name="size_error_msg">You should add size</string>
    <string name="category_error_msg">You should add category</string>
    <string name="brand_error_msg">You should add brand</string>
    <string name="description_error_msg">You should add description</string>
</resources>