<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".view.InstructionsOnBoardingFragment">

        <TextView
            style="@style/main_topic_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_instructions" />

        <TextView
            style="@style/main_topic_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_now_instructions" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start"
            android:text="@string/start"
            style="@style/btn_style"/>
    </LinearLayout>
</layout>