<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="shoeDetails"
            type="com.example.shoestore.model.ShoeDetails" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_brand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/brand"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoeDetails.brand}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/category"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoeDetails.category}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/description"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoeDetails.description}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_size"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/size"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoeDetails.shoeSize}" />

        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_Shoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_shoe" />
    </LinearLayout>


</layout>